# FramesDoc

./: .env.example  .gitignore  20260715-planning.txt  AGENTS.md  CONTEXT.md  DEMO-SCRIPT.md  DEMO.md  HERMES.md  README.md  app.py  pyproject.toml
.agent/memories/: patterns_and_lessons.md
.agent/memories/architectural_decisions/: 0001-local-first-evidence-pipeline.md  0002-hybrid-grounded-evidence.md  0003-keyless-review.md  0004-ocr-evaluation.md
.agent/memories/codebase_insights/: product_concept.md  vertical_slice.md
.agent/memories/history/: 20260715-bootstrap.md  20260715-keyless-review.md  20260715-ocr-evaluation.md  20260715-vertical-spike.md
artifacts/fe32a31196fd/: document.html  document.md  evaluation.json  manifest.json  ocr.json
demo/: hackathon-demo.vtt
docs/adr/: 0001-mvp-video-to-docs-pipeline.md  0002-hybrid-frame-selection-and-grounded-output.md  0003-sidecar-transcripts-and-non-destructive-review.md  0004-optional-ocr-and-diagnostic-evaluation.md
evaluation/: README.md
evaluation/fixtures/: demo-runbook.json
research/: LINKS.md
scripts/: transcribe_to_vtt.py
src/video_document_agent/: __init__.py  cli.py  eval_cli.py  evaluation.py  media.py  models.py  ocr.py  openai_analysis.py  pipeline.py  render.py  review.py  transcripts.py
tests/: test_evaluation.py  test_media.py  test_ocr.py  test_openai_analysis.py  test_pipeline.py  test_render.py  test_review.py  test_transcripts.py
